<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_profile">

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.danielsela.myapplication.ui.ProfileFragment.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_dogsitter"
        android:name="com.danielsela.myapplication.ui.DogsitterFragment.DogsitterFragment"
        android:label="@string/menu_dogsitter"
        tools:layout="@layout/fragment_dogsitter" >

        <action
            android:id="@+id/action_nav_dogsitter_to_nav_one_chat"
            app:destination="@id/nav_one_chat" />
    </fragment>

    <fragment
        android:id="@+id/nav_playdate"
        android:name="com.danielsela.myapplication.ui.PlaydateFragment.PlaydateFragment"
        android:label="@string/menu_playdate"
        tools:layout="@layout/fragment_playdate" >

        <action
            android:id="@+id/action_nav_playdate_to_nav_one_chat"
            app:destination="@id/nav_one_chat" />
    </fragment>

    <fragment
        android:id="@+id/nav_chat"
        android:name="com.danielsela.myapplication.ui.ChatFragment.ChatFragment"
        android:label="@string/menu_chat"
        tools:layout="@layout/fragment_chat" >
        <action
            android:id="@+id/action_nav_chat_to_nav_one_chat"
            app:destination="@id/nav_one_chat" />
    </fragment>

    <fragment
        android:id="@+id/nav_one_chat"
        android:name="com.danielsela.myapplication.ui.ChatFragment.ChattingFragment"
        android:label="@string/menu_chatting"
        tools:layout="@layout/activity_chat" />

    <fragment
        android:id="@+id/nav_login"
        android:name="com.danielsela.myapplication.ui.LoginFragment.LoginFragment"
        android:label="@string/start_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_nav_login_to_nav_home"
            app:destination="@id/nav_profile" />
    </fragment>

</navigation>